# RL_DQN

./: .gitignore  README.md  agent.py  dqn_model.py  environment.py  frame_inspect.ipynb  main.py  main2.py  pyproject.toml  replay_memory.ipynb  replay_memory.py  requirements.txt  stats_analysis.ipynb  test.py
analyses/: frame_inspect.ipynb  stats_analysis.ipynb
dqn/: __init__.py  agent.py  environment.py  model.py  replay_memory.py
models/run2/: latest.pth
models/run3/: dqn_model_ep10000.pth
tests/: test.py
