[project]
name = "my-ml-project"
version = "0.1.0"
description = "Project using torch, torchvision, opencv and gymnasium[atari]"
readme = "README.md"
authors = [
  { name="Your Name", email="you@example.com" }
]
requires-python = ">=3.11,<3.12"

dependencies = [
  "torch>=2.2.0",         # see CUDA/CPU notes below
  "torchvision>=0.15.2",
  "opencv-python>=4.8.0",
  "gymnasium>=0.29.1",
  "pip",
  "tqdm"
]

[project.optional-dependencies]
atari = ["gymnasium[atari]"]

[tool.uv]
# optional: set default groups/extras for `uv sync` if you want
# default-groups = ["dev"]